[project]
name = "youtube-audio-download"
version = "0.1.0"
description = "Download YouTube channel videos as MP3"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.1.0",
    "questionary>=2.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
ytdl = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
